--- a/chat-app-frontend/public/manifest.json
+++ b/chat-app-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "AI Messenger",
+  "name": "Generative Chat AI Messenger",
   "icons": [
     {
       "src": "favicon.ico",
@@ -21,5 +21,8 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "splash_pages": null,
+  "description": "A powerful generative chat AI messenger that learns from your conversations.",
+  "orientation": "portrait"
 }
